--- a/Physics1C/main.tex
+++ b/Physics1C/main.tex
@@ -9,12 +9,11 @@
 \raggedright
 \section{Math}
 
-\LARGE ${Ae^{i\theta}=Acos(\theta)+iAsin(\theta)}$
-
-\LARGE ${Ae^{-i\theta}=Acos(\theta)-iAsin(\theta)}$
+\LARGE ${e^{i\theta}=cos(\theta)+isin(\theta)}$
+\large Euler's Law
 
 \LARGE ${\int \frac{1}{(R^2+x^2)^{3/2}}=\frac{x}{R^2(R^2+x^2)^{1/2}}}$
-
+\large A Common Integral
 
 \section{Constants}
 \Large {Electron/Proton Charge = -1.6E-19 [C]}
@@ -219,11 +218,18 @@
 
 \large {$C_{eff}$, $Q_{eff}$ are the inverse of the sum of inversed sub-components }
 
+\large {Resonance when voltage to resistor is max and capacitor/inductor impedance is zero}
+
 \LARGE$V_s^2 =V_R^2+(V_L-V_C)^2$
 
 \LARGE$I_s =I_R=I_L=I_C$
 
 \LARGE$Z^2 =R^2+(X_L-X_C)^2$
+\large Reactance Geometric Format
+
+\LARGE$\widetilde{Z} =R+(X_L-X_C)i$
+\large Reactance Complex Format
+
 
 \LARGE$cos(\theta)=R/Z$
 
@@ -233,12 +239,18 @@
 
 \large {$R_{eff}$, $L_{eff}$ are the inverse of the sum of inversed sub-components }
 
+\large {Resonance when current to resistor is max and capacitor/inductor impedance is infinite}
+
 
 \LARGE$I_s^2 =I_R^2+(I_L-I_C)^2$
 
 \LARGE$V_s =V_R=V_L=V_C$
 
-\LARGE$\frac{1}{Z} =\sqrt{(\frac{1}{R})^2+(\frac{1}{X_L}-\frac{1}{X_C})^2}$
+\LARGE$\frac{1}{Z} =\sqrt{(\frac{1}{R})^2+(\frac{1}{X_L}-\frac{1}{X_C})^2}$ \large Reactance Geometric Format
+
+\LARGE$\frac{1}{\widetilde{Z}} =\frac{1}{R}+
+(\frac{1}{X_L}-\frac{1}{X_C})i$
+\large Reactance Complex Format
 
 \LARGE$Y=\frac{1}{Z}$
 \large {Admittance}
@@ -250,13 +262,18 @@
 \large {Leading means current is ahead of voltage in phase diagram}
 
 \LARGE$\omega=\frac{1}{\sqrt{LC}}$
-\large {Resonance Frequency}
+\large {Resonance Frequency when Net Reactance is 0}
 
 \LARGE$X_L=\omega{L}$
+
+\LARGE$\widetilde{Z_L}=iX_L$
 \large {Inductor Reactance}
 
 \LARGE$X_C=\frac{1}{\omega{C}}$
+
+\LARGE$\widetilde{Z_C}=-iX_C$
 \large {Capacitor Reactance}
+
 
 \LARGE$P=\frac{1}{2}V_{max}I_{max}cos(\theta)$
 \large {Power}
