--- a/Physics1C/main.tex
+++ b/Physics1C/main.tex
@@ -7,6 +7,8 @@
 \begin{document}
 
 \raggedright
+\setlength{\parskip}{\baselineskip}%
+\setlength{\parindent}{0pt}%
 \section{Math}
 
 \LARGE ${e^{i\theta}=cos(\theta)+isin(\theta)}$
@@ -66,8 +68,9 @@
 
 \large Slow changes in current
 
-\LARGE$M_{21} =N_2\Phi_{B2}/I_1=N_1\Phi_{B1}/I_2$
-\large{Mutual Inductance, proportionality of EMF in coil 2 to change in current in coil 1}
+\large{Mutual inductance is the proportionality of EMF in coil 2 to change in current in coil 1, and vice versa}
+
+\LARGE$M_{21} =M_{12}=N_2\Phi_{B2}/I_1=N_1\Phi_{B1}/I_2$
 
 \LARGE$M =\mu_oAN_1N_2/l$
 \large{Mutual Inductance}
@@ -196,19 +199,19 @@
 
 \LARGE $I_{RAV}=\frac{2}{\pi}I_{max}$
 
-\Large {Time Constant}
+
 
 \LARGE$\tau = RC$
-\large{RC Circuit}
+\large{RC Circuit Time Constant}
 
 \LARGE$\tau = L/R$
-\large{LR Circuit}
+\large{LR Circuit Time Constant}
 
 \LARGE$I = I_o{e^{\frac{-t}{\tau}}}$
-\large{Discharging}
+\large{Current when Discharging}
 
 \LARGE$I = I_o({1-e^{\frac{-t}{\tau} })}$
-\large{Charging}
+\large{Current when Charging}
 
 
 
@@ -256,6 +259,7 @@
 \large {Admittance}
 
 \LARGE$cos(\theta)=Z/R$
+\large {Angle between current and voltage}
 
 \section{ Both Circuits}
 
